"ChangeLog"

2006-08-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80:
	  Duplicate tag.


2006-08-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-61:
	  Updated scripts/maintainerclobber, result is now squeaky clean!


2006-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-60:
	  Added AC_PATH_X for future planning.


2006-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-58:
	  Makefile maintainence:
		Fixed cvsignore target recursiveness, using Makefile.in's
		template recipe for RECURSIVE_TARGETS (MORE_RECURSIVE_TARGETS)


2006-08-09	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54-prsim-07-06:
	  configure.ac: check for unsigned type aliases, like uchar.  


2006-08-07	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-51:
	  config/config_subst.awk: handle autoconf-2.60 substitution sugar.
	  bootstrap now supports autoconf-2.60.


2006-08-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-49:
	  Added MAINTAINER-checklist and CONTRIBUTORS.  


2006-07-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-40:
	  config/documentation.m4, configure.ac:
		added more checks for graphviz programs.  


2006-07-27	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-38:
	  scripts/tally_tests.awk now counts skipped tests.


2006-07-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-24-merged-cow-07:
	  Branch merge.  copy-on-write unrolling, higher-dimension
		aggregate references and collections.  
	  scripts/rm_pattern.sh: more robust file cleaning of patterns
	  config/am__remove_distdir.diff: more robust rm -rf


2006-07-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-20-cow-03:
	  Added scripts/rm_pattern.sh used in the definition of
		RM_PATTERN in Make.stddef.  rm residues begone!

