@@ -3,14 +3,14 @@
 # (Prior to 2005/06/19, this file was "configure.in", 
 #	in case one should want to trace back the CVS revision history.)
 #
-#	$Id: configure.ac,v 1.89 2006/08/22 00:12:11 fang Exp $
+#	$Id: configure.ac,v 1.90 2006/08/25 05:47:41 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
 
 AC_PREREQ(2.59)
 dnl also works with autoconf 2.60 now
-AC_INIT(hackt, 0.1.4-devel-20060821, fangism@users.sourceforge.net)
+AC_INIT(hackt, 0.1.4-devel-20060824, fangism@users.sourceforge.net)
 dnl prefer to push this into src directory, 
 dnl and have "src/config.h" wrap around this.  
 AC_CONFIG_HEADERS([src/__config__.h])
@@ -388,6 +388,7 @@ AC_CONFIG_FILES([
 	test/prsim/Makefile
 	test/lib/Makefile
 	test/benchmarks/Makefile
+	test/quarantine/Makefile
 	dox/Makefile
 	dox/mk/Makefile
 	dox/lang/Makefile
