@@ -10,7 +10,7 @@
 	preprocessor definition.  
 	However, in production code, this file should be EMPTY, 
 	and NO translation unit should depend on this i.e. do not include.  
-	$Id: devel_switches.h,v 1.17 2006/07/04 07:25:47 fang Exp $
+	$Id: devel_switches.h,v 1.18 2006/08/25 05:47:44 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEVEL_SWITCHES_H__
@@ -37,8 +37,16 @@
 /**
 	Define to 1 to enable lookup of global meta parameter values.
 	Affects "Object/unroll/unroll_context_value_resolver.cc".
+	Goal: to be decided by language spec.
  */
 #define	LOOKUP_GLOBAL_META_PARAMETERS		1
+
+/**
+	Replace instance collection replications with placeholders, 
+	and use back-references to the placeholders.  
+	Goal: 1
+ */
+#define	USE_INSTANCE_PLACEHOLDERS		0
 
 //=============================================================================
 
