@@ -1,10 +1,10 @@
 # "test/Makefile.am"
-#	$Id: Makefile.am,v 1.32 2006/08/14 22:32:49 fang Exp $
+#	$Id: Makefile.am,v 1.33 2006/08/25 05:47:53 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
 # this directory first, to clean the test-report
-SUBDIRS = . lexer parser prsim lib benchmarks
+SUBDIRS = . lexer parser prsim lib benchmarks quarantine
 
 # bogus test
 TESTS +=
@@ -70,6 +70,14 @@ EXTRA_DIST += ChangeLog README TODO test.cvsignore \
 
 # automatically distributed, via configure sources:
 #	$(PRECONFIGURED_TESTSCRIPTS)
+
+dist-hook:
+	bogus='$(BOGUS_TARGETS)'; \
+	distdir=$(distdir) ; \
+	for b in $$bogus ; do \
+		$(RM) -r `$(FIND) $$distdir -name "$$b"` ; \
+	done
+
 
 # template test Makefile
 include $(top_srcdir)/test/Make.test-tail
