@@ -1,0 +1,39 @@
+# "test/quarantine/Makefile.am"
+#	$Id: Makefile.am,v 1.1 2006/08/25 05:47:54 fang Exp $
+
+include $(top_srcdir)/test/Make.test-head
+
+# tests in this directory will involve the lib directory files
+HACO_FLAGS += -I$(top_srcdir)/lib
+
+# just to make sure library files compile
+HACKT_PARSE_TEST_PASSES =
+HACKT_PARSE_TEST_WARNINGS =
+HACKT_PARSE_TEST_FAILURES =
+
+HACKT_PARSE_TEST_SUBJECTS = \
+	$(HACKT_PARSE_TEST_FAILURES) \
+	$(HACKT_PARSE_TEST_WARNINGS) \
+	$(HACKT_PARSE_TEST_PASSES)
+
+HACKT_OBJ_TEST_SUBJECTS = \
+	$(HACKT_PARSE_TEST_WARNINGS) \
+	$(HACKT_PARSE_TEST_PASSES)
+
+HACKT_UNROLL_TEST_SUBJECTS = $(HACKT_PARSE_TEST_PASSES)
+HACKT_CREATE_TEST_SUBJECTS = $(HACKT_UNROLL_TEST_SUBJECTS)
+HACKT_ALLOC_TEST_SUBJECTS = $(HACKT_CREATE_TEST_SUBJECTS)
+
+HACKT_PRSIMRC_TEST_SUBJECTS =
+
+HACKT_PRSIMRC_TEST_SCRIPTS_BASES =
+
+HACKT_CFLAT_LVS_TEST_SUBJECTS =
+
+HACKT_PRSIM_CKPT_TEST_SCRIPTS_BASES = $(HACKT_PRSIMRC_TEST_SCRIPTS_BASES)
+HACKT_PRSIM_OPT_TEST_SCRIPTS_BASES = $(HACKT_PRSIM_CKPT_TEST_SCRIPTS_BASES)
+
+EXTRA_DIST += README
+
+include $(top_srcdir)/test/Make.test-tail
+
